fixed the link in footer, aligned the title of aside, made another way for consol.log the form info

--- a/styles/style.css
+++ b/styles/style.css
@@ -210,6 +210,11 @@ footer p {
   margin: 0;
 }
 
+#home-page-aside-title {
+  text-align: left;
+  margin: 0;
+}
+
 .home-aside-blog-tiles-text h2 {
   color:  #103E67;
   font-size: 0.8rem;
